# billion-rows-challenge

./: .gitignore  Makefile  README.md  makefile  pyproject.toml
.github/workflows/: ci.yml
src/: run.py
src/data/: stations_raw.txt
src/main/: test_duckdb.py  test_pandas.py  test_polars.py  test_python.py  test_sqlite.py
src/main/bash/: test_awk.sh
src/main/python/: duckdb_vortex.py  polars_vortex.py  test_duckdb.py  test_pandas.py  test_polars.py  test_python.py  test_sqlite.py
src/main/rust/: Cargo.toml
src/main/rust/src/: main.rs
src/scripts/: convert_data.py  create_data.py  logging_config.py  timeit.py
