[project]
name = "billion-rows-challenge"
version = "0.1.0"
description = "Benchmarking data processing tools on 1 billion rows"
authors = [
    { name = "Joseph Cavarretta", email = "joseph.m.cavarretta@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
