[project]
name = "billion-rows-challenge"
version = "0.1.0"
description = "Benchmarking data processing tools on 1 billion rows"
authors = [
    { name = "Joseph Cavarretta", email = "joseph.m.cavarretta@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "vortex-data>=0.79.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
# benchmark scripts run against local, trusted file paths and constant table names
"src/main/python/test_duckdb.py" = ["S608"]
"src/main/python/test_sqlite.py" = ["S603", "S607", "S608"]
# synthetic data generation: randomness is intentionally non-cryptographic
"src/scripts/create_data.py" = ["S311"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
